--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@duckdb/duckdb-wasm": "^1.30.0",
     "@huggingface/transformers": "^3.8.1",
     "@langchain/community": "^1.1.1",
     "@langchain/core": "^1.1.7",
     "@langchain/textsplitters": "^1.0.1",
-    "@mlc-ai/web-llm": "^0.2.80",
     "@xenova/transformers": "^2.17.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "voy-search": "^0.6.3"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
